client/src/components/styles/login.css
.login-page {
  display: flex;
  flex-direction: column;
  height: 100vh;
}

.login-content {
  flex: 1;
  display: flex;
}

.login-left {
  flex: 1.5;
  background-color: #ffecd1;
  display: flex;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.login-image {
  width: 100%;
  height: 100%;
  object-fit: cover;
  border-radius: 10px;
}

.login-right {
  flex: 1;
  padding: 30px 40px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  background: #fff;
  text-align: left;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
  border-radius: 8px;
}

.login-right-message1,
.login-right-message2,
.signup-link {
  text-align: center;
}

.login-form {
  margin-top: 20px;
  display: flex;
  flex-direction: column;
}

h1 {
  margin: 0;
  font-size: 28px;
  font-weight: bold;
  color: #333;
}

p {
  margin-top: 5px;
  color: #777;
  text-align: center;
}

label {
  font-size: 14px;
  margin-bottom: 5px;
  color: #555;
}

input,
select {
  padding: 10px;
  margin-bottom: 20px;
  border: 1px solid #ddd;
  border-radius: 5px;
  font-size: 14px;
}

input:focus,
select:focus {
  outline: none;
  border-color: #ffa726;
}

.login-button {
  padding: 10px;
  background: linear-gradient(90deg, #ffa726, #ff6f00);
  border: none;
  border-radius: 5px;
  color: white;
  font-size: 16px;
  cursor: pointer;
}

.login-button:hover {
  background: linear-gradient(90deg, #ff8a50, #ff6f00);
}

.signup-link {
  margin-top: 10px;
  text-align: center;
  font-size: 14px;
}

.signup-link a {
  color: #ffa726;
  text-decoration: none;
}

.signup-link a:hover {
  text-decoration: underline;
}

.error-message {
  color: red;
  font-size: 14px;
  margin-bottom: 10px;
}

.password-container {
  display: flex;
  align-items: center;
  position: relative;
}

.password-container input {
  width: 100%;
  padding-right: 50px;
  box-sizing: border-box;
}

.toggle-password {
  position: absolute;
  top: 50%;
  right: 10px;
  transform: translateY(-50%);
  background: none;
  border: none;
  color: #ffa726;
  font-size: 14px;
  cursor: pointer;
}

.toggle-password:hover {
  text-decoration: underline;
}

